# lets-try-purescript

./: .dir-locals.el  .gitignore  DB.hs  Data.hs  Main.hs  Makefile  PRESENTATION.org  README.org  cabal.sandbox.config  environment.scm  index.css  index.html  lets-try-purescript.cabal  packages.dhall  spago.dhall
src/: First.purs  Main.purs
src/Fifth/: Data.purs  Main.purs  Messages.purs  Page.purs
src/First/: Component.purs  Main.purs
src/Fourth/: Data.purs  Github.purs  Main.purs  Page.purs  User.purs
src/Second/: Component.purs  Main.purs
src/Third/: Github.purs  HTML.purs  Main.purs  Style.purs
