name:                lets-try-purescript
version:             0.1.0.0
synopsis:            A small demo for purescript/halogen
license:             GPL-2
license-file:        LICENSE
author:              John Soo
maintainer:          jsoo1@asu.edu
category:            Web
build-type:          Simple
extra-source-files:  README.org
cabal-version:       >=1.10

executable lets-try-purescript
  main-is:             Main.hs
  other-extensions:    DataKinds
                     , DeriveAnyClass
                     , DeriveGeneric
                     , OverloadedStrings
                     , RecordWildCards
                     , TypeOperators
  build-depends: aeson >=1.4.2.0 && <5
               , async >=2.2.1 && <2.3
               , base >=4.12 && <4.13
               , containers >=0.6 && <0.7
               , directory >=1.3.3.2 && <1.4
               , optparse-generic >=1.3.0 && <1.4
               , servant-server >=0.15 && <0.16
               , servant-websockets >=1.1.0 && <1.2
               , stm >=2.5.0.0 && <2.6
               , text >=1.2 && <1.3
               , time >=1.8.0.2 && <1.9
               , warp >=3.2.26 && <3.3
               , websockets >=0.12.5.2 && <0.12.6
  hs-source-dirs:      .
  default-language:    Haskell2010
  ghc-options:    -Wno-missing-methods -Wno-missing-home-modules
